--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "nodemon --env-file=.env src/app.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.966.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
