--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "input": "^1.0.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.13.2",
     "multer": "^2.0.0",
     "nodemon": "^3.1.9",
